[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ship/projectiles/plasma_bullet.gd" type="Script" id=1]
[ext_resource path="res://art/projectiles/plasma.png" type="Texture" id=2]
[ext_resource path="res://art/sound/laser1.wav" type="AudioStream" id=3]
[ext_resource path="res://art/light/light.jpg" type="Texture" id=4]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.0108696, -40.0909 ), 0.0, 0.0, 0, 0, Vector2( 0.972826, 169.364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.30957, 0, 0.299292, 1, 0.887695, 0.56868, 0.794857, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 98.8
angle_curve = SubResource( 2 )
scale = 2.5
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=6]

[node name="plasma_bullet" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 3.375, 1 )
rotation = 1.5708
lifetime = 0.7
process_material = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.375, 1 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 4.375, 1 )
texture = ExtResource( 4 )
texture_scale = 0.25
color = Color( 0.972549, 0.494118, 1, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 4.375, 1 )
stream = ExtResource( 3 )
autoplay = true

[node name="kill_time" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="plasma_bul" type="Area2D" parent="."]
position = Vector2( 4.375, 1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="plasma_bul"]
position = Vector2( 4, -0.5 )
scale = Vector2( 0.0399998, 0.16 )
shape = SubResource( 6 )

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="kill_time" to="." method="_on_kill_time_timeout"]
[connection signal="body_entered" from="plasma_bul" to="." method="_on_hit_box_body_entered"]
